--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>博客</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/jsTool/jQuery.js"></script>
-    <script src="./js/jsTool/bootstrap.min.js"></script>
-    <script src="./js/index.js"></script>
+    <link rel="stylesheet" href="./my/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./my/css/index.css">
+    <script src="./my/js/jsTool/jQuery.js"></script>
+    <script src="./my/js/jsTool/bootstrap.min.js"></script>
+    <script src="./my/js/index.js"></script>
 </head>
 
 <body>
