--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
                                     </div>
                                 </a>
                                 <div class="aouther">
-                                    <img src="./images/tx.jpeg" alt="">
+                                    <img src="./my/images/tx.jpeg" alt="">
                                     <span class="info">张三&nbsp;&nbsp;&nbsp;2022-12-26</span>
                                     <span class="count"> 浏览量: <span>123</span> </span>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-4 col-xs-4">
-                            <img src="./images/tx.jpeg" alt="" class="img-responsive">
+                            <img src="./my/images/tx.jpeg" alt="" class="img-responsive">
                         </div>
                     </div>
                     <div class="row">
@@ -96,14 +96,14 @@
                                     </div>
                                 </a>
                                 <div class="aouther">
-                                    <img src="./images/tx.jpeg" alt="">
+                                    <img src="./my/images/tx.jpeg" alt="">
                                     <span class="info">张三&nbsp;&nbsp;&nbsp;2022-12-26</span>
                                     <span class="count"> 浏览量: <span>123</span> </span>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-4 col-xs-4">
-                            <img src="./images/tx.jpeg" alt="" class="img-responsive">
+                            <img src="./my/images/tx.jpeg" alt="" class="img-responsive">
                         </div>
                     </div>
                     <div class="row">
@@ -118,14 +118,14 @@
                                     </div>
                                 </a>
                                 <div class="aouther">
-                                    <img src="./images/tx.jpeg" alt="">
+                                    <img src="./my/images/tx.jpeg" alt="">
                                     <span class="info">张三&nbsp;&nbsp;&nbsp;2022-12-26</span>
                                     <span class="count"> 浏览量: <span>123</span> </span>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-4 col-xs-4">
-                            <img src="./images/tx.jpeg" alt="" class="img-responsive">
+                            <img src="./my/images/tx.jpeg" alt="" class="img-responsive">
                         </div>
                     </div>
                     <div class="row">
@@ -140,14 +140,14 @@
                                     </div>
                                 </a>
                                 <div class="aouther">
-                                    <img src="./images/tx.jpeg" alt="">
+                                    <img src="./my/images/tx.jpeg" alt="">
                                     <span class="info">张三&nbsp;&nbsp;&nbsp;2022-12-26</span>
                                     <span class="count"> 浏览量: <span>123</span> </span>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-4 col-xs-4">
-                            <img src="./images/tx.jpeg" alt="" class="img-responsive">
+                            <img src="./my/images/tx.jpeg" alt="" class="img-responsive">
                         </div>
                     </div>
                     <div class="row">
@@ -162,14 +162,14 @@
                                     </div>
                                 </a>
                                 <div class="aouther">
-                                    <img src="./images/tx.jpeg" alt="">
+                                    <img src="./my/images/tx.jpeg" alt="">
                                     <span class="info">张三&nbsp;&nbsp;&nbsp;2022-12-26</span>
                                     <span class="count"> 浏览量: <span>123</span> </span>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-4 col-xs-4">
-                            <img src="./images/tx.jpeg" alt="" class="img-responsive">
+                            <img src="./my/images/tx.jpeg" alt="" class="img-responsive">
                         </div>
                     </div>
                     <div class="row">
@@ -184,14 +184,14 @@
                                     </div>
                                 </a>
                                 <div class="aouther">
-                                    <img src="./images/tx.jpeg" alt="">
+                                    <img src="./my/images/tx.jpeg" alt="">
                                     <span class="info">张三&nbsp;&nbsp;&nbsp;2022-12-26</span>
                                     <span class="count"> 浏览量: <span>123</span> </span>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-4 col-xs-4">
-                            <img src="./images/tx.jpeg" alt="" class="img-responsive">
+                            <img src="./my/images/tx.jpeg" alt="" class="img-responsive">
                         </div>
                     </div>
                     <div class="next">
